patches-dsl/tests/fixtures/errors/bare_module.patches
# error: bare_module — module keyword with no name or type
patch {
    module
}
